--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "license": "ISC",
   "dependencies": {
     "amqplib": "^0.5.2",
+    "chai": "^4.1.2",
     "express": "^4.16.2",
+    "morgan": "^1.9.0",
     "pg": "^7.4.0",
-    "sequelize": "^4.28.6"
+    "sequelize": "^4.28.6",
+    "winston": "^2.4.0"
   },
   "devDependencies": {
     "mocha": "^4.0.1"
