--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "amqplib": "^0.5.2",
     "chai": "^4.1.2",
     "express": "^4.16.2",
+    "lodash": "^4.17.4",
     "morgan": "^1.9.0",
     "pg": "^7.4.0",
     "sequelize": "^4.28.6",
