--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Amaro Duarte",
   "license": "ISC",
   "dependencies": {
+    "@google/maps": "^0.4.5",
     "amqplib": "^0.5.2",
     "chai": "^4.1.2",
     "express": "^4.16.2",
