--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "dependencies": {
     "@google/maps": "^0.4.5",
     "amqplib": "^0.5.2",
+    "axios": "^0.17.1",
     "chai": "^4.1.2",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.4.1",
     "pg": "^7.4.0",
     "sequelize": "^4.28.6",
     "winston": "^2.4.0"
