--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "seed": "node ./utils/init.js",
-    "test": "mocha tests/**/*.test.js --exit --timeout 15000",
+    "test": "node ./utils/init.js && mocha tests/**/*.test.js --exit --timeout 15000",
     "start": "node ./utils/init.js && node index.js",
     "debug": "node --inspect-brk index.js"
   },
